--- a/src/App.css
+++ b/src/App.css
@@ -1,33 +1,49 @@
-.App {
-  text-align: center;
+:root{
+  --mainBlue:#2a2a72;
+  --lightBlue:#009ffd;
+  --mainWhite:#f3f3f3;
+  --mainDrak:#232528;
+  --mainYellow:#ffa400;
 }
-
-.App-logo {
-  animation: App-logo-spin infinite 20s linear;
-  height: 40vmin;
-  pointer-events: none;
+body{
+  font-family: "Roboto", sans-serif !important;
+  line-height: 24px;
+  font-size: 14px;
+  font-weight: normal;
+  background: var(--mainWhite) !important;
 }
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+.text-title{
+  font-family: "Roboto", sans-serif;
+  letter-spacing: 0.3rem;
+  text-transform: uppercase;
 }
-
-.App-link {
-  color: #61dafb;
-}
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
+.text-blue{
+  color: var(--mainBlue);
   }
-  to {
-    transform: rotate(360deg);
+  .text-dark{
+    color: var(--mainDrak)
   }
+.text-bright{
+  color: var(--lightBlue);
+}
+.nav-brand{
+  height: 50px;
+  width: 80px;
+  box-shadow: 10px 5px 5px  #232528;
+  border-radius: 5px;  
+}
+.dropdown {
+  float: left;
+  overflow: hidden;
+}
+ a:hover, .dropdown:hover .dropbtn {
+  background-color: rgb(179, 166, 166);
+}
+
+
+.dropdown:hover .dropdown-content {
+  display: block;
+}
+.product-list{
+  box-shadow: 10px 5px 5px  #abafb6;
 }
